--- a/index.html
+++ b/index.html
@@ -40,17 +40,23 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        BALA
+                        <span class="text-primary">GOWDHAM.G</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Mvit Puducherry·
+                        <a href="mitgowdham@gmail.com">mitgowdham@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">A motivated student with a solid foundation in Machine Learning and hands-on internship experience,
+                        driven by a curiosity to solve real-world problems using AI.Proficient in programming languages like Python,
+                        Java, and C++, with practical knowledge of frameworks such as TensorFlow, OpenCV and Figma.Skilled in
+                        managing datasets using MySQL and experienced in collaborative development using Git and
+                        GitHub.Equipped with a resilient "never give up" attitude, strong problem-solving abilities, and a
+                        collaborative mindset, I am eager to apply my knowledge to innovative projects, while continuously learning
+                        and growing in the Machine Learning field</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/bala-gowdham-a89b41258/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Balagowdham?tab=repositories"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
@@ -63,19 +69,20 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Machine learning Intern
+                            </h3>
+                            <div class="subheading mb-3">TechnoHacks Edutech</div>
+                            <p>During my virtual internship in Machine Learning, I gained hands-on experience in developing and deploying AI solutions using Python, TensorFlow, and Scikit-learn. I worked with real-world datasets and optimized machine learning models while addressing complex challenges. My key projects included house price prediction, diabetes prediction, and foundational ML tasks such as classification, regression, clustering, and dimensionality reduction.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2024 - July 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Garnishing talent</h3>
+                            <div class="subheading mb-3">Mvit,Eaton and CII.</div>
+                            <p>I participated in the 'Garnishing Talent' program, conducted by EATON and CII, aimed at enhancing students' soft skills and communication abilities to improve career opportunities. Over the course of six weeks, I had the privilege of learning from six industry professionals, including highly experienced HRs and CEOs. Each week, I was introduced to new technologies, developed essential soft skills, and gained insights into becoming a successful entrepreneur in the modern technological landscape. The program also included a selection process and group discussions, designed to improve our chances of securing positions with top companies such as ZOHO and TCS Digital</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2024- December 2024 </span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -102,18 +109,18 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Manakula Vinayagar Institute of Technologyr</h3>
+                            <div class="subheading mb-3">Bachelor of Technology</div>
+                            <div>Artificial Intelligence and Machine Learning - Machine Learning and Web design track </div>
+                            <p>CGPA: 9.21</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2022 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Alpha Matric Higher Secondary School </h3>
+                            <div class="subheading mb-3">HSC</div>
+                            <p>Percentage: 91.5%</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
@@ -159,6 +166,26 @@
                         </li>
                     </ul>
                 </div>
+                    <div class="subheading mb-3">Workflow</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Mobile-First, Responsive Design
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Browser Testing & Debugging
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Cross Functional Teams
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Agile Development & Scrum
+                        </li>
+                    </ul>
+                </div>
             </section>
             <hr class="m-0" />
             <!-- Interests-->
@@ -177,17 +204,17 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            Certified Python Programmer - Certiport certification. 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Artificial Intelligence Specialist - Ceritiport Certification
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
+                            2
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Place - Manakula Vinayagar Institute of Technology - Front End Fusion Competition 2024
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
